--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,11 @@
+server:
+  port: ${SERVER_PORT}
+
 spring:
   application:
     name: user-service
   config:
-    import: "configserver:http://localhost:8088"
+    import: "configserver:${CONFIG_SERVER_URL}"
   data:
     mongodb:
-      uri: mongodb://root:secret@localhost:27017/mydatabase?authSource=admin
+      uri: "mongodb://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?authSource=admin"
