Implemented Swagger, Changed shoudNotFilter to access "**" Create openai.yaml to customize swagger UI

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,3 +3,7 @@ spring:
     name: user-service
   config:
     import: "configserver:${CONFIG_SERVER_URL}"
+
+springdoc:
+  swagger-ui:
+    url: /openai.yaml
