--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,16 +36,15 @@ jobs:
           --health-retries=5
 
       zookeeper:
-        image: confluentinc/cp-zookeeper:latest
+        image: zookeeper:3.8
         ports:
           - 2181:2181
-        env:
-          ZOOKEEPER_CLIENT_PORT: 2181
         options: >-
-          --health-cmd "echo ruok | nc localhost 2181 | grep imok"
+          --health-cmd="echo ruok | nc localhost 2181 || exit 1"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=10
+          --health-start-period=40s
 
       kafka:
         image: confluentinc/cp-kafka:7.4.3
