--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -16,8 +16,10 @@ eureka:
     enabled: false
 redis:
   reset-password:
-    token:
-      ttl: 600
+    prefixes:
+      email-prefix: "test-email-prefix:"
+      token-prefix: "test-token-prefix:"
+    ttl: 600
 kafka:
   host: localhost
   port: 9092
