#10: ci cd confs

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,16 +9,16 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     services:
       mongo:
         image: mongo:latest
         ports:
           - 27017:27017
         env:
-          MONGO_DB_URI: ${{ secrets.MONGO_DB_URI }}
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: secret
         options: >-
-          --health-cmd "mongosh --eval 'db.adminCommand(\"ping\")'"
+          --health-cmd="mongosh --username root --password secret --authenticationDatabase admin --eval 'db.adminCommand(\"ping\")'"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -72,4 +72,6 @@ jobs:
           cache: maven
 
       - name: Run tests
+        env:
+          MONGO_DB_URI: ${{ secrets.MONGO_DB_URI }}
         run: mvn clean verify -DskipITs=false
