--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,7 +51,7 @@ jobs:
           - 9092:9092
         env:
           KAFKA_BROKER_ID: 1
-          KAFKA_ZOOKEEPER_CONNECT: localhost:2181
+          KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
           KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
           KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
           KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
@@ -61,6 +61,7 @@ jobs:
           --health-interval=15s
           --health-timeout=10s
           --health-retries=10
+          --health-start-period=60s
 
     steps:
       - uses: actions/checkout@v4
@@ -74,9 +75,10 @@ jobs:
 
       - name: Wait for MongoDB to be ready
         run: |
+          echo "⏳ Waiting for MongoDB..."
           for i in {1..30}; do
             nc -z localhost 27017 && echo "✅ MongoDB is up!" && exit 0
-            echo "Waiting for MongoDB..."
+            echo "Waiting for MongoDB... attempt $i"
             sleep 2
           done
           echo "❌ MongoDB did not start in time" && exit 1
