--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,5 +85,5 @@ jobs:
 
       - name: Run tests
         env:
-          MONGO_DB_URI: mongodb://root:secret@localhost:27017/mydatabase?authSource=admin&authMechanism=SCRAM-SHA-256
+          MONGO_DB_URI: ${{ secrets.MONGO_DB_URI }}
         run: mvn -B clean verify -DskipITs=false
