--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,13 +77,39 @@ jobs:
         run: |
           echo "⏳ Waiting for MongoDB..."
           for i in {1..30}; do
-            nc -z localhost 27017 && echo "✅ MongoDB is up!" && exit 0
+            nc -z localhost 27017 && echo "✅ MongoDB is up!" && break
             echo "Waiting for MongoDB... attempt $i"
             sleep 2
           done
-          echo "❌ MongoDB did not start in time" && exit 1
+
+      - name: Wait for Redis to be ready
+        run: |
+          echo "⏳ Waiting for Redis..."
+          for i in {1..20}; do
+            nc -z localhost 6379 && echo "✅ Redis is up!" && break
+            echo "Waiting for Redis... attempt $i"
+            sleep 2
+          done
+
+      - name: Wait for Zookeeper to be ready
+        run: |
+          echo "⏳ Waiting for Zookeeper..."
+          for i in {1..20}; do
+            nc -z localhost 2181 && echo "✅ Zookeeper is up!" && break
+            echo "Waiting for Zookeeper... attempt $i"
+            sleep 2
+          done
+
+      - name: Wait for Kafka to be ready
+        run: |
+          echo "⏳ Waiting for Kafka..."
+          for i in {1..30}; do
+            nc -z localhost 9092 && echo "✅ Kafka is up!" && break
+            echo "Waiting for Kafka... attempt $i"
+            sleep 2
+          done
 
       - name: Run tests
         env:
-          MONGO_DB_URI: ${{ secrets.MONGO_DB_URI }}
+          MONGO_DB_URI: mongodb://root:secret@localhost:27017/mydatabase?authSource=admin&authMechanism=SCRAM-SHA-256
         run: mvn -B clean verify -DskipITs=false
