--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -106,10 +106,11 @@ jobs:
           for i in {1..30}; do
             nc -z localhost 9092 && echo "✅ Kafka is up!" && break
             echo "Waiting for Kafka... attempt $i"
+            echo ${{ secrets.MONGO_DB_URI }}
             sleep 2
           done
 
       - name: Run tests
         env:
-          MONGO_DB_URI: ${{ secrets.db_envs.MONGO_DB_URI }}
+          MONGO_DB_URI: ${{ secrets.MONGO_DB_URI }}
         run: mvn -B clean verify -DskipITs=false
