--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -4,7 +4,7 @@ spring:
       host: localhost
       port: 6379
     mongodb:
-      uri: ${MONGO_DB_URI:mongodb://root:secret@localhost:27017/mydatabase?authSource=admin}
+      uri: ${MONGO_DB_URI}
       authentication-database: admin
 security:
   jwt:
