config changes, resend, test impl

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -18,11 +18,16 @@ eureka:
     enabled: false
 
 redis:
-  reset-password:
-    prefixes:
-      email-prefix: "test-email-prefix:"
-      otp-prefix: "test-otp-prefix:"
-    ttl: 600
+  password-recovery:
+    email:
+      prefix: "test-email-prefix:"
+      ttl: 600
+    otp:
+      prefix: "test-otp-prefix:"
+      ttl: 600
+    attempts:
+      prefix: "test-attempts-prefix:"
+      ttl: 3600
 
 kafka:
   host: localhost
