--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,8 +1,7 @@
 spring:
+  kafka:
+    bootstrap-servers: localhost:9092
   data:
-    redis:
-      host: localhost
-      port: 6379
     mongodb:
       uri: mongodb://${MONGO_USERNAME:root}:${MONGO_PASSWORD:secret}@${MONGO_HOST:localhost}:${MONGO_PORT:27017}/${MONGO_DATABASE:mydatabase}?authSource=admin&authMechanism=SCRAM-SHA-256
       authentication-database: admin
@@ -40,8 +39,6 @@ redis:
       ttl: 3600
 
 kafka:
-  host: localhost
-  port: 9092
   events:
     email-otp-notification-event:
       topic: "EMAIL_OTP_NOTIFICATION_TEST_TOPIC"
