refactoring: removed default value for redis props

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -2,8 +2,11 @@ spring:
   kafka:
     bootstrap-servers: localhost:9092
   data:
+    redis:
+      host: localhost
+      port: 6379
     mongodb:
-      uri: mongodb://${MONGO_USERNAME:root}:${MONGO_PASSWORD:secret}@${MONGO_HOST:localhost}:${MONGO_PORT:27017}/${MONGO_DATABASE:mydatabase}?authSource=admin&authMechanism=SCRAM-SHA-256
+      uri: mongodb://root:secret@localhost:27017/mydatabase?authSource=admin&authMechanism=SCRAM-SHA-256
       authentication-database: admin
 
 security:
