--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
 			<artifactId>zipkin-reporter-brave</artifactId>
 		</dependency>
 
+        <!--google-->
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
         <!--message broker dependency-->
 
         <dependency>
