--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,8 @@
 			<artifactId>zipkin-reporter-brave</artifactId>
 		</dependency>
 
-        <!--google-->
+        <!--google dependency-->
+
         <dependency>
             <groupId>com.google.api-client</groupId>
             <artifactId>google-api-client</artifactId>
