--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
             <version>1.18.38</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.6.3</version>
+        </dependency>
 		<dependency>
 			<groupId>io.github.vendo-marketplace-be</groupId>
 			<artifactId>common</artifactId>
